# FinResearch-MCP-Server

./: .gitignore  README.md  main.py  pyproject.toml
docs/: PRD.md  tasks.md
modules/: __init__.py  analysis.py  cn_analyzer.py  cn_stock_fetcher.py  html_generator.py  parser.py  scraper.py
scripts/: smoke_test.py
