[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.3",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "pdfminer.six>=20231228",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "requests>=2.32.4",
]
